	non-UTF-8 locales on other OSes.

    o	scan() gains a 'fileEncoding' argument to match read.table().

    o	points() and lines() gain "table" methods to match plot().
	(Wish of PR#10472.)

    o	Sys.chmod() allows 'mode' to be a vector, recycled along 'paths'.

    o	There are |, & and xor() methods for classes "octmode" and
	"hexmode", which work bitwise.


DEPRECATED & DEFUNCT

    o	Supplying the parser with a string containing both octal/hex and
	Unicode escapes is now an error.

    o	File extension .C for C++ code files in packages is now defunct.


PACKAGE INSTALLATION

    o	install.packages() has a new argument 'libs_only' to optionally
	pass --libs-only to INSTALL and works analogously for Windows
	binary installs (to add support for 64- or 32-bit Windows).

    o	When sub-architectures are in use, the installed architectures
	are recorded in the 'Archs' field of the DESCRIPTION file.
	There is a new default filter, "subarch", in
	available.packages() to make use of this.

	Code is compiled in a copy of the 'src' directory when a
	package is installed for more than one sub-architecture: this
	avoid problems with cleaning the sources between building
	sub-architectures.

    o	R CMD INSTALL --libs-only no longer overrides the setting of
	locking, so a previous version of the package will be restored
	unless --no-lock is specified.


UTILITIES

    o	R CMD check has a new argument --extra-arch to confine tests
	to those needed to check an additional sub-architecture.

    o	R CMD Rd2dvi makes use of tools::texi2dvi to process the
	package manual.


C-LEVEL FACILITIES

    o	lang5() and lang6() {in addition to pre-existing lang[1-4]()}
	convenience functions for easier construction of eval() calls.
	If you have your own definition, do wrap it inside
	'#ifndef lang5 .... #endif' to keep it working with old and new R.

    o	Header R.h now includes only the C headers it itself needs,
	hence no longer includes errno.h.  (This helps avoid problems