@@ -11,13 +11,15 @@ R_PAPERSIZE=${R_PAPERSIZE-'@R_PAPERSIZE@'}
 ## Default print command
 R_PRINTCMD=${R_PRINTCMD-'@R_PRINTCMD@'}
 ## Default TeXMF stuff
-R_LATEXCMD=${R_LATEXCMD-${LATEX-'@LATEXCMD@'}}
-R_PDFLATEXCMD=${R_PDFLATEXCMD-${PDFLATEX-'@PDFLATEXCMD@'}}
-R_DVIPSCMD=${R_DVIPSCMD-${DVIPS-'@DVIPSCMD@'}}
-MAKEINDEX=${MAKEINDEX-'@MAKEINDEXCMD@'}
-R_TEXI2DVICMD=${R_TEXI2DVICMD-${TEXI2DVI-'@TEXI2DVICMD@'}}
+# R_LATEXCMD=${R_LATEXCMD-${LATEX-'@LATEXCMD@'}}
+# R_PDFLATEXCMD=${R_PDFLATEXCMD-${PDFLATEX-'@PDFLATEXCMD@'}}
+# MAKEINDEX=${MAKEINDEX-'@MAKEINDEXCMD@'}
 R_RD4DVI=${R_RD4DVI-'@R_RD4DVI@'}
 R_RD4PDF=${R_RD4PDF-'@R_RD4PDF@'}
+## used for options("texi2dvi")
+R_TEXI2DVICMD=${R_TEXI2DVICMD-${TEXI2DVI-'@TEXI2DVICMD@'}}
+## used by help(help_type = "ps")
+R_DVIPSCMD=${R_DVIPSCMD-${DVIPS-'@DVIPSCMD@'}}
 ## used by INSTALL, check, build
 R_GZIPCMD=${R_GZIPCMD-'@R_GZIPCMD@'}
 ## Default zip/unzip commands
