@@ -10,16 +10,20 @@ PERL5LIB=${R_SHARE_DIR}/perl;${PERL5LIB}
 TEXINPUTS=.;${TEXINPUTS};${R_SHARE_DIR}/texmf;
 
 ## from etc/Renviron
-R_PLAFORM='i386-pc-mingw32'
+# R_PLATFORM='i386-pc-mingw32'
 R_PAPERSIZE_USER=${R_PAPERSIZE}
 R_PAPERSIZE=${R_PAPERSIZE-'a4'}
 ## Default TeXMF stuff
-R_LATEXCMD=${R_LATEXCMD-${LATEX-'latex'}}
-R_PDFLATEXCMD=${R_PDFLATEXCMD-${PDFLATEX-'pdflatex'}}
-R_DVIPSCMD=${R_DVIPSCMD-${DVIPS-'dvips'}}
-MAKEINDEX=${MAKEINDEX-'makeindex'}
+# R_LATEXCMD=${R_LATEXCMD-${LATEX-'latex'}}
+# R_PDFLATEXCMD=${R_PDFLATEXCMD-${PDFLATEX-'pdflatex'}}
+# MAKEINDEX=${MAKEINDEX-'makeindex'}
 R_RD4DVI=${R_RD4DVI-'ae'}
 R_RD4PDF=${R_RD4PDF-'times,hyper'}
+## used for options("texi2dvi")
+# R_TEXI2DVICMD=${R_TEXI2DVICMD-${TEXI2DVI-'texi2dvi'}}
+## used by help(help_type = "ps")
+R_DVIPSCMD=${R_DVIPSCMD-${DVIPS-'dvips'}}
+## used by INSTALL, check, build
 R_GZIPCMD=${R_GZIPCMD-'gzip'}
 ## Default zip/unzip commands
 R_UNZIPCMD=${R_UNZIPCMD-'unzip'}
@@ -28,15 +32,16 @@ R_BZIPCMD=${R_BZIPCMD-'bzip2'}
 ## Default browser
 R_BROWSER=${R_BROWSER-'open'}
 ## Default editor
-#EDITOR=${EDITOR-${VISUAL-vi}}
+# EDITOR=${EDITOR-${VISUAL-vi}}
 ## Default pager
-#PAGER=${PAGER-''}
+# PAGER=${PAGER-''}
 ## Default PDF viewer
 R_PDFVIEWER=${R_PDFVIEWER-'open'}
 ## Use configure values
 AWK=gawk
 GREP='grep -E'
-#MAKE=${MAKE-make'}
-#PERL=${PERL-perl}
+# MAKE=${MAKE-make}
+# PERL=${PERL-perl}
 SED=${SED-sed}
-#TAR=${TAR-tar}
+# TR=${TR-tar'}
+# TAR=${TAR-tar}
